# AISweeper

./: .gitignore  AISweeper.pro  CMakeLists.txt  common_functions.cpp  common_functions.h  commonfunctions.cpp  commonfunctions.h  control_window.cpp  control_window.h  controlwindow.cpp  controlwindow.h  main.cpp  makefile  readme.txt  sweeper_game.cpp  sweeper_game.h  sweeper_model.cpp  sweeper_model.h  sweeper_node.cpp  sweeper_resources.qrc  sweeper_widget.cpp  sweepergame.cpp  sweepergame.h  sweepermodel.cpp  sweepermodel.h  sweepernode.cpp  sweepernode.h  sweeperwidget.cpp  sweeperwidget.h
doc/: uml.asciio
inc/: sweeper_batch_manager.h  sweeper_batch_settings.h  sweeper_batch_status.h  sweeper_common_functions.h  sweeper_control_window.h  sweeper_control_window_old.h  sweeper_game.h  sweeper_model.h  sweeper_node.h  sweeper_widget.h
inc/players/: player_abstract.h  player_human.h  player_machine_learning_ai.h  player_probability_based_ai.h  player_random_action_ai.h
old/standalone_c/: NOTE  bits.c  client_game.c  constants.c  interface.h  mt19937.c  mt19937.h  server_game.c  server_main.c  utilities.c  utilities.h
rsc/: sweeper_resources.qrc
src/: sweeper_batch_manager.cpp  sweeper_batch_settings.cpp  sweeper_batch_status.cpp  sweeper_common_functions.cpp  sweeper_control_window.cpp  sweeper_control_window_old.cpp  sweeper_game.cpp  sweeper_main.cpp  sweeper_model.cpp  sweeper_node.cpp  sweeper_widget.cpp
src/c/: client_game.c  client_game.h  client_interface.c  client_interface.h  client_main.c  common_constants.c  common_constants.h  common_enums.h  common_functions.c  common_functions.h  common_structs.h  server_game.c  server_game.h  server_interface.c  server_interface.h  server_main.c  server_mt19937.c  server_mt19937.h
src/players/: player_abstract.cpp  player_human.cpp  (+3 more)
standalone_c/: bits.h  client_game.c  client_game.h  constants.c  constants.h  interface.c  interface.h  makefile  mt19937.c  mt19937.h  server_game.c  server_game.h  server_interface.c  server_interface.h  server_main.c  sweeper.c  sweeper.h  utilities.c  utilities.h
standalone_cpp_qt/: AISweeper.pro  NOTE
ui/: sweeper_control_window.ui
(+21 files in other folders)
